--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   get_it: ^7.6.7
   dio: ^5.4.0
+  flutter_spinkit: ^5.2.0
+  duration: ^3.0.13
 
 dev_dependencies:
   flutter_test:
