--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   dio: ^5.4.0
   flutter_spinkit: ^5.2.0
   duration: ^3.0.13
+  timeago: ^3.6.0
 
 dev_dependencies:
   flutter_test:
